feat: configurar producer da DLQ, usa-lo no consumer e adicionar propriedades necessarias no application.yml

--- a/cargo-service/src/main/resources/application.yml
+++ b/cargo-service/src/main/resources/application.yml
@@ -20,8 +20,12 @@ spring:
     password: ${RABBITMQ_PASSWORD:guest}
 
 rabbitmq:
-  queue:
-    name: cargo-queue
+  consumer:
+    queue:
+      name: cargo-queue
+  producer:
+    exchange: rabbit-project
+    routing-key: cargo-queue-dlq
 
 server:
   port: 8083
