--- a/bff/src/main/resources/application.yml
+++ b/bff/src/main/resources/application.yml
@@ -1,6 +1,4 @@
-spring:
-  application:
-    name: bff
-
-server:
-  port: 8080
+quarkus:
+  rest-client:
+    cargo-api:
+      url: ${CARGO_API_URL:https://localhost:8083}
