--- a/compose.yaml
+++ b/compose.yaml
@@ -19,13 +19,15 @@ services:
     networks:
       - default
 
-#  bff:
-#    build: ./bff
-#    ports:
-#      - 8080:8080
-#    networks:
-#      - default
-#    restart: on-failure
+  bff:
+   build:
+    context: ./bff
+    dockerfile: Dockerfile.native
+   ports:
+     - 8080:8080
+   networks:
+     - default
+   restart: on-failure
 
   message-producer:
     build: ./message-producer
