config: alterar nome da exchange do rabbitmq

--- a/cargo-service/src/main/resources/application.yml
+++ b/cargo-service/src/main/resources/application.yml
@@ -24,7 +24,7 @@ rabbitmq:
     queue:
       name: cargo-queue
   producer:
-    exchange: rabbit-project
+    exchange: rabbit-project-exchange
     routing-key: cargo-queue-dlq
 
 server:
