--- a/bff/src/main/resources/application.yml
+++ b/bff/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 quarkus:
   rest-client:
     cargo-api:
-      url: ${CARGO_API_URL:https://localhost:8083}
+      url: ${CARGO_API_URL:http://localhost:8083}
+    cargo-message-producer-api:
+      url: ${CARGO_MESSAGE_PRODUCER_API_URL:http://localhost:8081}
